Fonts and other

--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preload" href="assets/fonts/Inter-Regular.woff2" as="font">
+    <link rel="preload" href="assets/fonts/Inter-Bold.woff2" as="font">
+    <link rel="preload" href="assets/fonts/Inter-ExtraBold.woff2" as="font">
     <link rel="stylesheet" href="assets/styles/index.css">
     <title>Путешествия по России</title>
 </head>
 <body class="page">
+<header class="header container">
+    <img class="header__logo" src="assets/images/header-logo.svg" alt="Логотип 'Россия'">
+    <ul class="header__list">
+        <li class="header__lang-link">Ru</li>
+        <li class="header__lang-link">En</li>
+    </ul>
+</header>
 
 </body>
 </html>
