blocks — header, lead (all resolutions)

--- a/index.html
+++ b/index.html
@@ -5,20 +5,48 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="preload" href="assets/fonts/Inter-Regular.woff2" as="font">
-    <link rel="preload" href="assets/fonts/Inter-Bold.woff2" as="font">
-    <link rel="preload" href="assets/fonts/Inter-ExtraBold.woff2" as="font">
+    <link rel="preload" href="assets/fonts/Inter-Regular.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="assets/fonts/Inter-Bold.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="assets/fonts/Inter-ExtraBold.woff2" as="font" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/styles/index.css">
     <title>Путешествия по России</title>
 </head>
 <body class="page">
 <header class="header container">
     <img class="header__logo" src="assets/images/header-logo.svg" alt="Логотип 'Россия'">
-    <ul class="header__list">
-        <li class="header__lang-link">Ru</li>
-        <li class="header__lang-link">En</li>
+    <ul class="header__list list">
+        <li><a class="header__lang-link header__lang-link_active" href="#">Ru</a></li>
+        <li><a class="header__lang-link" href="#">En</a></li>
     </ul>
 </header>
+<main>
+    <section class="lead">
+        <div class="container">
+            <h1 class="lead__title">Путешествия по России</h1>
+            <h2 class="lead__subtitle">Настоящая страна не в выпусках
+            новостей, а здесь.</h2>
+        </div>
+        <div class="lead__bg-image container container_type_fluid">
+            <picture>
+                <source
+                        type="image/webp"
+                        srcset="assets/images/lead-shelf.webp,
+                                assets/images/lead-shelf@2x.webp 2x,
+                                assets/images/lead-shelf@3x.webp 3x"
+                />
+                <img
+                        class="lead__image image"
+                        src="assets/images/lead-shelf.jpg"
+                        srcset="assets/images/lead-shelf@2x.jpg 2x,
+                                assets/images/lead-shelf@3x.jpg 3x"
+                        alt="Поездка в поезде"
+                        width="768"
+                        height="480">
+            </picture>
+        </div>
+        <p class="lead__caption container">ваша полка — верхняя</p>
+    </section>
+</main>
 
 </body>
 </html>
