--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <li><a class="header__lang-link" href="#">En</a></li>
     </ul>
 </header>
-<main>
-    <section class="lead">
+<main class="content">
+    <section class="lead content__lead">
         <div class="container">
             <h1 class="lead__title">Путешествия по России</h1>
             <h2 class="lead__subtitle">Настоящая страна не в выпусках
-            новостей, а здесь.</h2>
+                новостей, а здесь.</h2>
         </div>
-        <div class="lead__bg-image container container_type_fluid">
+        <div class="lead__bg-image container-fluid">
             <picture>
                 <source
                         type="image/webp"
@@ -45,6 +45,42 @@
             </picture>
         </div>
         <p class="lead__caption container">ваша полка — верхняя</p>
+    </section>
+    <section class="intro content__intro container">
+        <div class="intro__inner">
+            <h2 class="intro__title">Чего мы там не видели?</h2>
+            <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать,
+                но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом
+                деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато
+                Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых
+                перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей,
+                усадила их в свою «Ладу»
+                и проехала 20 тысяч километров
+                по родной стране. Мы выбрали
+                и описали некоторые интересные места, достойные вашего отпуска.</p>
+            <dl class="intro__peculiarities">
+                <div class="intro__flex-wrapper">
+                    <dt class="intro__term">Часовых поясов</dt>
+                    <dd class="intro__definition">11</dd>
+                </div>
+                <div class="intro__flex-wrapper">
+                    <dt class="intro__term">Объектов природного наследия ЮНЕСКО</dt>
+                    <dd class="intro__definition">12</dd>
+                </div>
+                <div class="intro__flex-wrapper">
+                    <dt class="intro__term">Объектов культурного наследия ЮНЕСКО</dt>
+                    <dd class="intro__definition">16</dd>
+                </div>
+                <div class="intro__flex-wrapper">
+                    <dt class="intro__term">Природных заповедников</dt>
+                    <dd class="intro__definition">105</dd>
+                </div>
+                <div class="intro__flex-wrapper">
+                    <dt class="intro__term">Аэропортов</dt>
+                    <dd class="intro__definition">241</dd>
+                </div>
+            </dl>
+        </div>
     </section>
 </main>
 
