--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
                         srcset="assets/images/lead-shelf@2x.jpg 2x,
                                 assets/images/lead-shelf@3x.jpg 3x"
                         alt="Поездка в поезде"
-                        width="768"
-                        height="480">
+                        width="984"
+                        height="615">
             </picture>
         </div>
         <p class="lead__caption container">ваша полка — верхняя</p>
     </section>
     <section class="intro content__intro container">
         <div class="intro__inner">
-            <h2 class="intro__title">Чего мы там не видели?</h2>
+            <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
             <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать,
                 но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом
                 деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато
@@ -81,6 +81,82 @@
                 </div>
             </dl>
         </div>
+    </section>
+    <section class="photo-grid container">
+        <ul class="photo-grid__list">
+            <li class="photo-grid__item">
+                <picture>
+                    <source type="image/webp" srcset="assets/images/photo-grid-train.webp, assets/images/photo-grid-train@2x.webp 2x, assets/images/photo-grid-train@3x.webp 3x" />
+                    <img class="photo-grid__image image" src="assets/images/photo-grid-train.jpg" srcset="assets/images/photo-grid-train@2x.jpg 2x, assets/images/photo-grid-train@3x.jpg 3x," alt="Место в России: Вид из окна поезда" width="800" height="600" loading="lazy"/>
+                </picture>
+            </li>
+            <li class="photo-grid__item">
+                <picture>
+                    <source type="image/webp" srcset="assets/images/photo-grid-atharva-tulsi.webp, assets/images/photo-grid-atharva-tulsi@2x.webp 2x, assets/images/photo-grid-atharva-tulsi@3x.webp 3x" />
+                    <img class="photo-grid__image image" src="assets/images/photo-grid-atharva-tulsi.jpg" srcset="assets/images/photo-grid-atharva-tulsi@2x.jpg 2x, assets/images/photo-grid-atharva-tulsi@3x.jpg 3x," alt="Место в России: Горы в облаках" width="800" height="600" loading="lazy"/>
+                </picture>
+            </li>
+            <li class="photo-grid__item">
+                <picture>
+                    <source type="image/webp" srcset="assets/images/photo-grid-tuman.webp, assets/images/photo-grid-tuman@2x.webp 2x, assets/images/photo-grid-tuman@3x.webp 3x" />
+                    <img class="photo-grid__image image" src="assets/images/photo-grid-tuman.jpg" srcset="assets/images/photo-grid-tuman@2x.jpg 2x, assets/images/photo-grid-tuman@3x.jpg 3x," alt="Место в России: Ранее утро в туманном поле" width="800" height="600" loading="lazy"/>
+                </picture>
+            </li>
+            <li class="photo-grid__item">
+                <picture>
+                    <source type="image/webp" srcset="assets/images/photo-grid-sochi.webp, assets/images/photo-grid-sochi@2x.webp 2x, assets/images/photo-grid-sochi@3x.webp 3x" />
+                    <img class="photo-grid__image image" src="assets/images/photo-grid-sochi.jpg" srcset="assets/images/photo-grid-sochi@2x.jpg 2x, assets/images/photo-grid-sochi@3x.jpg 3x," alt="Место в России: Лес в тумане" width="800" height="600" loading="lazy"/>
+                </picture>
+            </li>
+            <li class="photo-grid__item">
+                <picture>
+                    <source type="image/webp" srcset="assets/images/photo-grid-arisa.webp, assets/images/photo-grid-arisa@2x.webp 2x, assets/images/photo-grid-arisa@3x.webp 3x" />
+                    <img class="photo-grid__image image" src="assets/images/photo-grid-arisa.jpg" srcset="assets/images/photo-grid-arisa@2x.jpg 2x, assets/images/photo-grid-arisa@3x.jpg 3x," alt="Место в Росси: Колесо автомобиля на фоне озера" width="800" height="600" loading="lazy"/>
+                </picture>
+            </li>
+            <li class="photo-grid__item">
+                <picture>
+                    <source type="image/webp" srcset="assets/images/photo-grid-baikal.webp, assets/images/photo-grid-baikal@2x.webp 2x, assets/images/photo-grid-baikal@3x.webp 3x" />
+                    <img class="photo-grid__image image" src="assets/images/photo-grid-baikal.jpg" srcset="assets/images/photo-grid-baikal@2x.jpg 2x, assets/images/photo-grid-baikal@3x.jpg 3x," alt="Место в Росси: Озеро 'Байкал'" width="800" height="600" loading="lazy"/>
+                </picture>
+            </li>
+            <li class="photo-grid__item">
+                <picture>
+                    <source type="image/webp" srcset="assets/images/photo-grid-elbrus.webp, assets/images/photo-grid-elbrus@2x.webp 2x, assets/images/photo-grid-elbrus@3x.webp 3x" />
+                    <img class="photo-grid__image image" src="assets/images/photo-grid-elbrus.jpg" srcset="assets/images/photo-grid-elbrus@2x.jpg 2x, assets/images/photo-grid-elbrus@3x.jpg 3x," alt="Место в Росси: Гора 'Эльбрус'" width="800" height="600" loading="lazy"/>
+                </picture>
+            </li>
+            <li class="photo-grid__item">
+                <picture>
+                    <source type="image/webp" srcset="assets/images/photo-grid-kondratiev.webp, assets/images/photo-grid-kondratiev@2x.webp 2x, assets/images/photo-grid-kondratiev@3x.webp 3x" />
+                    <img class="photo-grid__image image" src="assets/images/photo-grid-kondratiev.jpg" srcset="assets/images/photo-grid-kondratiev@2x.jpg 2x, assets/images/photo-grid-kondratiev@3x.jpg 3x," alt="Место в Росси: Знак пешеходного перехода на фоне массивных бетонных цилиндров" width="800" height="600" loading="lazy"/>
+                </picture>
+            </li>
+            <li class="photo-grid__item">
+                <picture>
+                    <source type="image/webp" srcset="assets/images/photo-grid-kamchatka-1.webp, assets/images/photo-grid-kamchatka-1@2x.webp 2x, assets/images/photo-grid-kamchatka-1@3x.webp 3x" />
+                    <img class="photo-grid__image image" src="assets/images/photo-grid-kamchatka-1.jpg" srcset="assets/images/photo-grid-kamchatka-1@2x.jpg 2x, assets/images/photo-grid-kamchatka-1@3x.jpg 3x," alt="Место в Росси: Полуостров Камчатка — горы в облаках" width="800" height="600" loading="lazy"/>
+                </picture>
+            </li>
+            <li class="photo-grid__item">
+                <picture>
+                    <source type="image/webp" srcset="assets/images/photo-grid-kamchatka-2.webp, assets/images/photo-grid-kamchatka-2@2x.webp 2x, assets/images/photo-grid-kamchatka-2@3x.webp 3x" />
+                    <img class="photo-grid__image image" src="assets/images/photo-grid-kamchatka-2.jpg" srcset="assets/images/photo-grid-kamchatka-2@2x.jpg 2x, assets/images/photo-grid-kamchatka-2@3x.jpg 3x," alt="Место в Росси: Полуостров Камчатка — луг на фоне гор" width="800" height="600" loading="lazy"/>
+                </picture>
+            </li>
+            <li class="photo-grid__item">
+                <picture>
+                    <source type="image/webp" srcset="assets/images/photo-grid-baikal-2.webp, assets/images/photo-grid-baikal-2@2x.webp 2x, assets/images/photo-grid-baikal-2@3x.webp 3x" />
+                    <img class="photo-grid__image image" src="assets/images/photo-grid-baikal-2.jpg" srcset="assets/images/photo-grid-baikal-2@2x.jpg 2x, assets/images/photo-grid-baikal-2@3x.jpg 3x," alt="Место в Росси: Озеро Байкал — горы на фоне озера" width="800" height="600" loading="lazy"/>
+                </picture>
+            </li>
+            <li class="photo-grid__item">
+                <picture>
+                    <source type="image/webp" srcset="assets/images/photo-grid-ergaki.webp, assets/images/photo-grid-ergaki@2x.webp 2x, assets/images/photo-grid-ergaki@3x.webp 3x" />
+                    <img class="photo-grid__image image" src="assets/images/photo-grid-ergaki.jpg" srcset="assets/images/photo-grid-ergaki@2x.jpg 2x, assets/images/photo-grid-ergaki@3x.jpg 3x," alt="Место в Росси: Горные системы и хребты 'Ергаки'" width="800" height="600" loading="lazy"/>
+                </picture>
+            </li>
+        </ul>
     </section>
 </main>
 
