--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <h2 class="place__title container">Куршская коса</h2>
                 <div class="place__website container">
                     <h3 class="place__url-heading">URL</h3>
-                    <a href="#" class="place__link">park-kosa.ru</a>
+                    <a class="place__link" href="http://park-kosa.ru" target="_blank" rel="noopener">park-kosa.ru</a>
                 </div>
                 <picture>
                     <source type="image/webp"
@@ -233,7 +233,8 @@
                 <h2 class="place__title container">Кольский</h2>
                 <div class="place__website container">
                     <h3 class="place__url-heading">URL</h3>
-                    <a href="#" class="place__link">National Geographic</a>
+                    <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+                       target="_blank" rel="noopener">National Geographic</a>
                 </div>
                 <picture>
                     <source type="image/webp"
@@ -258,7 +259,8 @@
                 <h2 class="place__title container">Алтай</h2>
                 <div class="place__website container">
                     <h3 class="place__url-heading">URL</h3>
-                    <a href="#" class="place__link">Facebook</a>
+                    <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
+                       target="_blank" rel="noopener">Facebook</a>
                 </div>
                 <picture>
                     <source type="image/webp"
@@ -282,7 +284,7 @@
                 <h2 class="place__title container">Зимний Байкал</h2>
                 <div class="place__website container">
                     <h3 class="place__url-heading">URL</h3>
-                    <a href="#" class="place__link">https://vk.com/baikalmile</a>
+                    <a class="place__link" href="https://vk.com/baikalmile" target="_blank" rel="noopener">https://vk.com/baikalmile</a>
                 </div>
 
                 <picture>
@@ -307,7 +309,7 @@
                 <h2 class="place__title container">Карелия</h2>
                 <div class="place__website container">
                     <h3 class="place__url-heading">URL</h3>
-                    <a href="#" class="place__link">http://vodlozero.ru/</a>
+                    <a class="place__link" href="http://vodlozero.ru" target="_blank" rel="noopener">http://vodlozero.ru/</a>
                 </div>
                 <picture>
                     <source type="image/webp"
@@ -330,6 +332,21 @@
                 </div>
             </li>
         </ul>
+    </section>
+    <section class="cover">
+        <a class="cover__link" href="#">
+            <div class="cover__background cover__overlay">
+                <div class="container">
+                <div class="cover__inner">
+                    <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
+                    <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
+                        на
+                        электричках.
+                    </p>
+                </div>
+            </div>
+            </div>
+        </a>
     </section>
 </main>
 
