--- a/index.html
+++ b/index.html
@@ -351,20 +351,20 @@
 <footer class="footer page__footer">
     <div class="footer__inner container">
         <nav>
-            <ul class="footer__list">
-                <li class="footer__item">
+            <ul class="footer__links">
+                <li>
                     <a href="https://yandex.ru/maps" class="footer__link hover-opacity" target="_blank" rel="noopener">Карты</a>
                 </li>
-                <li class="footer__item">
+                <li>
                     <a href="https://yandex.ru/maps" class="footer__link hover-opacity" target="_blank" rel="noopener">Погода</a>
                 </li>
-                <li class="footer__item">
+                <li>
                     <a href="https://rasp.yandex.ru" class="footer__link hover-opacity" target="_blank" rel="noopener">Расписание</a>
                 </li>
-                <li class="footer__item">
+                <li>
                     <a href="https://calendar.yandex.ru" class="footer__link hover-opacity" target="_blank" rel="noopener">Календарь</a>
                 </li>
-                <li class="footer__item">
+                <li>
                     <a href="https://travel.yandex.ru" class="footer__link hover-opacity" target="_blank" rel="noopener">Путешествия</a>
                 </li>
             </ul>
