--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <section class="lead content__lead">
         <div class="container">
             <h1 class="lead__title">Путешествия по России</h1>
-            <h2 class="lead__subtitle">Настоящая страна не в выпусках
-                новостей, а здесь.</h2>
+            <p class="lead__subtitle">Настоящая страна не в выпусках
+                новостей, а здесь.</p>
         </div>
         <div class="lead__bg-image">
             <picture>
@@ -202,9 +202,9 @@
         <ul class="places__list">
             <li class="places__place place">
                 <h2 class="place__title container">Куршская коса</h2>
-                <div class="place__website container">
-                    <h3 class="place__url-heading">URL</h3>
-                    <a class="place__link hover-opacity" href="http://park-kosa.ru" target="_blank" rel="noopener">park-kosa.ru</a>
+                <div class="place__website website container">
+                    <h3 class="website__url-heading">URL</h3>
+                    <a class="website__link hover-opacity" href="http://park-kosa.ru" target="_blank" rel="noopener">park-kosa.ru</a>
                 </div>
                 <picture>
                     <source type="image/webp"
@@ -231,9 +231,10 @@
             </li>
             <li class="places__place place">
                 <h2 class="place__title container">Кольский</h2>
-                <div class="place__website container">
-                    <h3 class="place__url-heading">URL</h3>
-                    <a class="place__link hover-opacity" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+                <div class="place__website website container">
+                    <h3 class="website__url-heading">URL</h3>
+                    <a class="website__link hover-opacity"
+                       href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
                        target="_blank" rel="noopener">National Geographic</a>
                 </div>
                 <picture>
@@ -257,9 +258,10 @@
             </li>
             <li class="places__place place">
                 <h2 class="place__title container">Алтай</h2>
-                <div class="place__website container">
-                    <h3 class="place__url-heading">URL</h3>
-                    <a class="place__link hover-opacity" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
+                <div class="place__website website container">
+                    <h3 class="website__url-heading">URL</h3>
+                    <a class="website__link hover-opacity"
+                       href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
                        target="_blank" rel="noopener">Facebook</a>
                 </div>
                 <picture>
@@ -284,7 +286,8 @@
                 <h2 class="place__title container">Зимний Байкал</h2>
                 <div class="place__website container">
                     <h3 class="place__url-heading">URL</h3>
-                    <a class="place__link hover-opacity" href="https://vk.com/baikalmile" target="_blank" rel="noopener">https://vk.com/baikalmile</a>
+                    <a class="place__link hover-opacity" href="https://vk.com/baikalmile" target="_blank"
+                       rel="noopener">https://vk.com/baikalmile</a>
                 </div>
 
                 <picture>
@@ -307,9 +310,9 @@
             </li>
             <li class="places__place place">
                 <h2 class="place__title container">Карелия</h2>
-                <div class="place__website container">
-                    <h3 class="place__url-heading">URL</h3>
-                    <a class="place__link hover-opacity" href="http://vodlozero.ru" target="_blank" rel="noopener">http://vodlozero.ru/</a>
+                <div class="place__website website container">
+                    <h3 class="website__url-heading">URL</h3>
+                    <a class="website__link hover-opacity" href="http://vodlozero.ru" target="_blank" rel="noopener">http://vodlozero.ru/</a>
                 </div>
                 <picture>
                     <source type="image/webp"
@@ -362,10 +365,12 @@
                     <a href="https://rasp.yandex.ru" class="footer__link hover-opacity" target="_blank" rel="noopener">Расписание</a>
                 </li>
                 <li>
-                    <a href="https://calendar.yandex.ru" class="footer__link hover-opacity" target="_blank" rel="noopener">Календарь</a>
+                    <a href="https://calendar.yandex.ru" class="footer__link hover-opacity" target="_blank"
+                       rel="noopener">Календарь</a>
                 </li>
                 <li>
-                    <a href="https://travel.yandex.ru" class="footer__link hover-opacity" target="_blank" rel="noopener">Путешествия</a>
+                    <a href="https://travel.yandex.ru" class="footer__link hover-opacity" target="_blank"
+                       rel="noopener">Путешествия</a>
                 </li>
             </ul>
         </nav>
