delete unused classes

--- a/index.html
+++ b/index.html
@@ -84,114 +84,114 @@
     </section>
     <section class="photo-grid container">
         <ul class="photo-grid__list">
-            <li class="photo-grid__item">
+            <li>
                 <picture>
                     <source type="image/webp"
                             srcset="assets/images/photo-grid-train.webp, assets/images/photo-grid-train@2x.webp 2x, assets/images/photo-grid-train@3x.webp 3x"/>
-                    <img class="photo-grid__image image" src="assets/images/photo-grid-train.jpg"
+                    <img class="image" src="assets/images/photo-grid-train.jpg"
                          srcset="assets/images/photo-grid-train@2x.jpg 2x, assets/images/photo-grid-train@3x.jpg 3x,"
                          alt="Место в России: Вид из окна поезда" width="800" height="600" loading="lazy"/>
                 </picture>
             </li>
-            <li class="photo-grid__item">
+            <li>
                 <picture>
                     <source type="image/webp"
                             srcset="assets/images/photo-grid-atharva-tulsi.webp, assets/images/photo-grid-atharva-tulsi@2x.webp 2x, assets/images/photo-grid-atharva-tulsi@3x.webp 3x"/>
-                    <img class="photo-grid__image image" src="assets/images/photo-grid-atharva-tulsi.jpg"
+                    <img class="image" src="assets/images/photo-grid-atharva-tulsi.jpg"
                          srcset="assets/images/photo-grid-atharva-tulsi@2x.jpg 2x, assets/images/photo-grid-atharva-tulsi@3x.jpg 3x,"
                          alt="Место в России: Горы в облаках" width="800" height="600" loading="lazy"/>
                 </picture>
             </li>
-            <li class="photo-grid__item">
+            <li>
                 <picture>
                     <source type="image/webp"
                             srcset="assets/images/photo-grid-tuman.webp, assets/images/photo-grid-tuman@2x.webp 2x, assets/images/photo-grid-tuman@3x.webp 3x"/>
-                    <img class="photo-grid__image image" src="assets/images/photo-grid-tuman.jpg"
+                    <img class="image" src="assets/images/photo-grid-tuman.jpg"
                          srcset="assets/images/photo-grid-tuman@2x.jpg 2x, assets/images/photo-grid-tuman@3x.jpg 3x,"
                          alt="Место в России: Ранее утро в туманном поле" width="800" height="600" loading="lazy"/>
                 </picture>
             </li>
-            <li class="photo-grid__item">
+            <li>
                 <picture>
                     <source type="image/webp"
                             srcset="assets/images/photo-grid-sochi.webp, assets/images/photo-grid-sochi@2x.webp 2x, assets/images/photo-grid-sochi@3x.webp 3x"/>
-                    <img class="photo-grid__image image" src="assets/images/photo-grid-sochi.jpg"
+                    <img class="image" src="assets/images/photo-grid-sochi.jpg"
                          srcset="assets/images/photo-grid-sochi@2x.jpg 2x, assets/images/photo-grid-sochi@3x.jpg 3x,"
                          alt="Место в России: Лес в тумане" width="800" height="600" loading="lazy"/>
                 </picture>
             </li>
-            <li class="photo-grid__item">
+            <li>
                 <picture>
                     <source type="image/webp"
                             srcset="assets/images/photo-grid-arisa.webp, assets/images/photo-grid-arisa@2x.webp 2x, assets/images/photo-grid-arisa@3x.webp 3x"/>
-                    <img class="photo-grid__image image" src="assets/images/photo-grid-arisa.jpg"
+                    <img class="image" src="assets/images/photo-grid-arisa.jpg"
                          srcset="assets/images/photo-grid-arisa@2x.jpg 2x, assets/images/photo-grid-arisa@3x.jpg 3x,"
                          alt="Место в Росси: Колесо автомобиля на фоне озера" width="800" height="600" loading="lazy"/>
                 </picture>
             </li>
-            <li class="photo-grid__item">
+            <li>
                 <picture>
                     <source type="image/webp"
                             srcset="assets/images/photo-grid-baikal.webp, assets/images/photo-grid-baikal@2x.webp 2x, assets/images/photo-grid-baikal@3x.webp 3x"/>
-                    <img class="photo-grid__image image" src="assets/images/photo-grid-baikal.jpg"
+                    <img class="image" src="assets/images/photo-grid-baikal.jpg"
                          srcset="assets/images/photo-grid-baikal@2x.jpg 2x, assets/images/photo-grid-baikal@3x.jpg 3x,"
                          alt="Место в Росси: Озеро 'Байкал'" width="800" height="600" loading="lazy"/>
                 </picture>
             </li>
-            <li class="photo-grid__item">
+            <li>
                 <picture>
                     <source type="image/webp"
                             srcset="assets/images/photo-grid-elbrus.webp, assets/images/photo-grid-elbrus@2x.webp 2x, assets/images/photo-grid-elbrus@3x.webp 3x"/>
-                    <img class="photo-grid__image image" src="assets/images/photo-grid-elbrus.jpg"
+                    <img class="image" src="assets/images/photo-grid-elbrus.jpg"
                          srcset="assets/images/photo-grid-elbrus@2x.jpg 2x, assets/images/photo-grid-elbrus@3x.jpg 3x,"
                          alt="Место в Росси: Гора 'Эльбрус'" width="800" height="600" loading="lazy"/>
                 </picture>
             </li>
-            <li class="photo-grid__item">
+            <li>
                 <picture>
                     <source type="image/webp"
                             srcset="assets/images/photo-grid-kondratiev.webp, assets/images/photo-grid-kondratiev@2x.webp 2x, assets/images/photo-grid-kondratiev@3x.webp 3x"/>
-                    <img class="photo-grid__image image" src="assets/images/photo-grid-kondratiev.jpg"
+                    <img class="image" src="assets/images/photo-grid-kondratiev.jpg"
                          srcset="assets/images/photo-grid-kondratiev@2x.jpg 2x, assets/images/photo-grid-kondratiev@3x.jpg 3x,"
                          alt="Место в Росси: Знак пешеходного перехода на фоне массивных бетонных цилиндров" width="800"
                          height="600" loading="lazy"/>
                 </picture>
             </li>
-            <li class="photo-grid__item">
+            <li>
                 <picture>
                     <source type="image/webp"
                             srcset="assets/images/photo-grid-kamchatka-1.webp, assets/images/photo-grid-kamchatka-1@2x.webp 2x, assets/images/photo-grid-kamchatka-1@3x.webp 3x"/>
-                    <img class="photo-grid__image image" src="assets/images/photo-grid-kamchatka-1.jpg"
+                    <img class="image" src="assets/images/photo-grid-kamchatka-1.jpg"
                          srcset="assets/images/photo-grid-kamchatka-1@2x.jpg 2x, assets/images/photo-grid-kamchatka-1@3x.jpg 3x,"
                          alt="Место в Росси: Полуостров Камчатка — горы в облаках" width="800" height="600"
                          loading="lazy"/>
                 </picture>
             </li>
-            <li class="photo-grid__item">
+            <li>
                 <picture>
                     <source type="image/webp"
                             srcset="assets/images/photo-grid-kamchatka-2.webp, assets/images/photo-grid-kamchatka-2@2x.webp 2x, assets/images/photo-grid-kamchatka-2@3x.webp 3x"/>
-                    <img class="photo-grid__image image" src="assets/images/photo-grid-kamchatka-2.jpg"
+                    <img class="image" src="assets/images/photo-grid-kamchatka-2.jpg"
                          srcset="assets/images/photo-grid-kamchatka-2@2x.jpg 2x, assets/images/photo-grid-kamchatka-2@3x.jpg 3x,"
                          alt="Место в Росси: Полуостров Камчатка — луг на фоне гор" width="800" height="600"
                          loading="lazy"/>
                 </picture>
             </li>
-            <li class="photo-grid__item">
+            <li>
                 <picture>
                     <source type="image/webp"
                             srcset="assets/images/photo-grid-baikal-2.webp, assets/images/photo-grid-baikal-2@2x.webp 2x, assets/images/photo-grid-baikal-2@3x.webp 3x"/>
-                    <img class="photo-grid__image image" src="assets/images/photo-grid-baikal-2.jpg"
+                    <img class="image" src="assets/images/photo-grid-baikal-2.jpg"
                          srcset="assets/images/photo-grid-baikal-2@2x.jpg 2x, assets/images/photo-grid-baikal-2@3x.jpg 3x,"
                          alt="Место в Росси: Озеро Байкал — горы на фоне озера" width="800" height="600"
                          loading="lazy"/>
                 </picture>
             </li>
-            <li class="photo-grid__item">
+            <li>
                 <picture>
                     <source type="image/webp"
                             srcset="assets/images/photo-grid-ergaki.webp, assets/images/photo-grid-ergaki@2x.webp 2x, assets/images/photo-grid-ergaki@3x.webp 3x"/>
-                    <img class="photo-grid__image image" src="assets/images/photo-grid-ergaki.jpg"
+                    <img class="image" src="assets/images/photo-grid-ergaki.jpg"
                          srcset="assets/images/photo-grid-ergaki@2x.jpg 2x, assets/images/photo-grid-ergaki@3x.jpg 3x,"
                          alt="Место в Росси: Горные системы и хребты 'Ергаки'" width="800" height="600" loading="lazy"/>
                 </picture>
@@ -200,7 +200,7 @@
     </section>
     <section class="places content__places">
         <ul class="places__list">
-            <li class="places__place place">
+            <li class="place">
                 <h2 class="place__title container">Куршская коса</h2>
                 <div class="place__website website container">
                     <h3 class="website__url-heading">URL</h3>
@@ -211,7 +211,7 @@
                             srcset="assets/images/place-kosa.webp, assets/images/place-kosa@2x.webp 2x, assets/images/place-kosa@3x.webp 3x"/>
                     <img src="assets/images/place-kosa.jpg" alt="Место в России: Корни деревьев на фоне залива"
                          srcset="assets/images/place-kosa@2x.jpg 2x, assets/images/place-altai@3x.jpg 3x"
-                         class="place__image image" width="920" height="920" loading="lazy">
+                         class="image" width="920" height="920" loading="lazy">
                 </picture>
                 <div class="place__inner container">
                     <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
@@ -229,7 +229,7 @@
                     </p>
                 </div>
             </li>
-            <li class="places__place place">
+            <li class="place">
                 <h2 class="place__title container">Кольский</h2>
                 <div class="place__website website container">
                     <h3 class="website__url-heading">URL</h3>
@@ -242,7 +242,7 @@
                             srcset="assets/images/place-kolsky.webp, assets/images/place-kolsky@2x.webp, assets/images/place-kolsky@3x.webp 3x"/>
                     <img src="assets/images/place-kolsky.jpg" alt="Место в России: Снежный берег"
                          srcset="assets/images/place-kolsky@2x.jpg, assets/images/place-kolsky@3x.jpg 3x"
-                         class="place__image image" width="920" height="920" loading="lazy">
+                         class="image" width="920" height="920" loading="lazy">
                 </picture>
                 <div class="place__inner container">
                     <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
@@ -256,7 +256,7 @@
                         билетом в Мурманск.</p>
                 </div>
             </li>
-            <li class="places__place place">
+            <li class="place">
                 <h2 class="place__title container">Алтай</h2>
                 <div class="place__website website container">
                     <h3 class="website__url-heading">URL</h3>
@@ -269,7 +269,7 @@
                             srcset="assets/images/place-altai.webp, assets/images/place-altai@2x.webp, assets/images/place-altai@3x.webp 3x"/>
                     <img src="assets/images/place-altai.jpg" alt="Место в России: Ноутбук на фоне Алтая"
                          srcset="assets/images/place-altai@2x.jpg, assets/images/place-altai@3x.jpg 3x"
-                         class="place__image image" width="920" height="920" loading="lazy">
+                         class="image" width="920" height="920" loading="lazy">
                 </picture>
                 <div class="place__inner container">
                     <p class="place__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор:
@@ -282,7 +282,7 @@
                         орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
                 </div>
             </li>
-            <li class="places__place place">
+            <li class="place">
                 <h2 class="place__title container">Зимний Байкал</h2>
                 <div class="place__website container">
                     <h3 class="place__url-heading">URL</h3>
@@ -296,7 +296,7 @@
                     <img src="assets/images/place-winter-baikal.jpg"
                          alt="Место в России: Треснувший лед озера 'Байкал'"
                          srcset="assets/images/place-winter-baikal@2x.jpg, assets/images/place-winter-baikal@3x.jpg 3x"
-                         class="place__image image" width="920" height="920" loading="lazy">
+                         class="image" width="920" height="920" loading="lazy">
                 </picture>
                 <div class="place__inner container">
                     <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают,
@@ -308,7 +308,7 @@
                         фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
                 </div>
             </li>
-            <li class="places__place place">
+            <li class="place">
                 <h2 class="place__title container">Карелия</h2>
                 <div class="place__website website container">
                     <h3 class="website__url-heading">URL</h3>
@@ -319,7 +319,7 @@
                             srcset="assets/images/place-karelia.webp, assets/images/place-karelia@2x.webp, assets/images/place-karelia@3x.webp 3x"/>
                     <img src="assets/images/place-karelia.jpg" alt="Место в России: Лес по обеим сторонам реки"
                          srcset="assets/images/place-karelia@2x.jpg, assets/images/place-karelia@3x.jpg 3x"
-                         class="place__image image" width="920" height="920" loading="lazy">
+                         class="image" width="920" height="920" loading="lazy">
                 </picture>
                 <div class="place__inner container">
                     <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
@@ -356,20 +356,20 @@
         <nav>
             <ul class="footer__links">
                 <li>
-                    <a href="https://yandex.ru/maps" class="footer__link hover-opacity" target="_blank" rel="noopener">Карты</a>
+                    <a class="footer__link hover-opacity" href="https://yandex.ru/maps" target="_blank" rel="noopener">Карты</a>
                 </li>
                 <li>
-                    <a href="https://yandex.ru/maps" class="footer__link hover-opacity" target="_blank" rel="noopener">Погода</a>
+                    <a class="footer__link hover-opacity" href="https://yandex.ru/maps" target="_blank" rel="noopener">Погода</a>
                 </li>
                 <li>
-                    <a href="https://rasp.yandex.ru" class="footer__link hover-opacity" target="_blank" rel="noopener">Расписание</a>
+                    <a class="footer__link hover-opacity" href="https://rasp.yandex.ru" target="_blank" rel="noopener">Расписание</a>
                 </li>
                 <li>
-                    <a href="https://calendar.yandex.ru" class="footer__link hover-opacity" target="_blank"
+                    <a class="footer__link hover-opacity" href="https://calendar.yandex.ru" target="_blank"
                        rel="noopener">Календарь</a>
                 </li>
                 <li>
-                    <a href="https://travel.yandex.ru" class="footer__link hover-opacity" target="_blank"
+                    <a class="footer__link hover-opacity" href="https://travel.yandex.ru" target="_blank"
                        rel="noopener">Путешествия</a>
                 </li>
             </ul>
